@@ -7,9 +7,6 @@ help:
 test:
 	php parserTests.php
 
-test-light:
-	php parserTests.php --color=light
-
 doc:
 	php mwdocgen.php -all
 	echo 'Doc generation done. Look at ./docs/html/'
